added a box and button to index.html and styled the box, added a style.css file as well

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../static/style.css">
     </head>
     <body>
       <h1>Welcome to the NoteManager app</h1>
+      <input type="text" placeholder="Please enter a note here" id="notebox">
+      <input type="submit">
         
         
     </body>
