created name and note box with button, retreived information, completed get and post methods for the form, minor style changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,12 @@
     </head>
     <body>
       <h1>Welcome to the NoteManager app</h1>
-      <input type="text" placeholder="Please enter a note here" id="notebox">
-      <input type="submit">
+      <form method="POST">
+        <input type="text" placeholder="Please enter your name" name="namebox" id="namebox"><br>
+        <input type="text" placeholder="Please enter a note here" name="notebox" id="notebox"><br>
+        <input type="submit" value="Post note" id="savebutton">
+      </form>
+      
         
         
     </body>
