--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,33 @@
 #notebox{
     background-color: beige;
-    width: 200px;
+    width: 400px;
+    height: 30px;
+}
+
+
+#namebox{
+    background-color: beige;
+    width: 300px;
+    height: 30px;
+
+
+}
+
+
+#savebutton{
+    background-color: blue;
+    width: 70px;
+    height: 30px;
+    color: white;
+
+
+}
+
+
+
+
+body{
+    background-color: grey;
+    color: lavender;
+
 }
