styled the input name and note boxes, and made entering name mandatory

--- a/templates/insertnotes.html
+++ b/templates/insertnotes.html
@@ -37,8 +37,8 @@
   </nav>
   <h1>Welcome to the NoteManager app</h1>
   <form method="POST">
-    <input class="form-control" type="text" placeholder="Please enter your name" name="namebox" id="namebox"><br>
-    <input class="form-control" type="text" placeholder="Please enter a note here" name="notebox" id="notebox"><br>
+    <input class="form-control" type="text" placeholder="Please enter your name" name="namebox" id="namebox" required="required"><br>
+    <textarea class="form-control" placeholder="Please enter your note here" name="notebox" id="notebox" required="required"></textarea>
     <input class="btn btn-secondary" type="submit" value="Post note">
   </form>
 
