--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,12 @@
-#notebox{
-    background-color: beige;
-    width: 400px;
-    height: 30px;
+#namebox{
+    background-color:lightgrey;
+    width: 300px;
 }
 
 
-#namebox{
-    background-color: beige;
-    width: 300px;
-    height: 30px;
-
-
+#notebox{
+    background-color: lightgrey;
+    width: 600px;
 }
 
 
